fix spacing in all sections

--- a/styles/main.css
+++ b/styles/main.css
@@ -4,7 +4,7 @@ body {
 }
 
 .container {
-  background-color: rgb(244, 240, 240);
+  background-color: rgb(248, 246, 246);
   width: 389px;
 }
 
@@ -12,7 +12,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #fff;
+  background-color: #FFFFFF;
   background-size: 100vw;
 }
 
@@ -45,7 +45,7 @@ a {
 }
 
 article {
-  background-color: #fff;
+  background-color: #FFFFFF;
   background-image: url(/imgs/header-shapes-mobile.png);
   background-repeat: no-repeat;
   background-position-y: 35px;
@@ -103,6 +103,8 @@ article ul {
   grid-template-columns: auto;
   width: 375px;
   border-radius: 16px;
+  padding: 16px;
+  
 }
 
 .content {
@@ -131,7 +133,7 @@ article ul {
   font-weight: 400;
   font-size: 15px;
   line-height: 24px;
-  background-color: #fff;
+  background-color: #FFFFFF;
   color: #344563;
   background-repeat: no-repeat;
   background-position: 16px 16px;
@@ -211,7 +213,7 @@ button {
   box-sizing: border-box;
   border-radius: 8px;
   color: #6070ff;
-  background-color: #fff;
+  background-color: #FFFFFF;
   margin-bottom: 28px;
   margin-left: 16px;
 }
@@ -247,7 +249,7 @@ button:active {
 #about-me {
   flex-direction: column;
   width: 375px;
-  background: #fff;
+  background: #FFFFFF;
   display: flex;
   border-top-right-radius: 80px;
   margin-top: 114px;
